[tool.poetry]
name = "profile-scraper"
version = "0.1.0"
description = "Profile scrapers for a variety of social media platforms"
authors = ["Nasir Abdulrasheed <mypythtesting@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
scrapy-splash = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
